<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">


    <ProgressBar
        android:id="@+id/progress_barr"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerInParent="true"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="-30dp">

            <ImageView
                android:id="@+id/image_lock"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_username" />


            <EditText
                android:id="@+id/name_id"
                android:layout_width="210dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:background="@drawable/custon_input"
                android:drawableStart="@drawable/custom_username"
                android:drawablePadding="10dp"
                android:hint="@string/user_name_text"
                android:inputType="text"
                android:paddingStart="10dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/email_id"
                android:layout_width="210dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginTop="19dp"
                android:background="@drawable/custon_input"
                android:drawableStart="@drawable/custom_email"
                android:drawablePadding="10dp"
                android:hint="@string/e_mail_text"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/password_id"
                android:layout_width="210dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginTop="19dp"
                android:background="@drawable/custon_input"
                android:drawableStart="@drawable/custom_password"
                android:drawablePadding="10dp"
                android:hint="@string/password_text"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/passwordConfirm_id"
                android:layout_width="210dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginTop="19dp"
                android:background="@drawable/custon_input"
                android:drawableStart="@drawable/custom_password"
                android:drawablePadding="10dp"
                android:hint="@string/confirm_password_text"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:textSize="18sp" />


            <Button
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:background="@drawable/design_sign_up"
                android:fontFamily="sans-serif-medium"
                android:onClick="btnRegisterEvent"
                android:text="@string/sign_up_text"
                android:textColor="@color/white_color"
                android:textSize="20dp" />


        </LinearLayout>
    </ScrollView>
</RelativeLayout>