<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


            <ImageView
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:src="@drawable/ic_lockk"
                android:id="@+id/image_lock"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                android:contentDescription="TODO" />

            <ImageView
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:src="@drawable/ic_lock_open"
                android:id="@+id/image_lock_open"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                android:visibility="gone"
                android:contentDescription="@string/todo" />



                <EditText
                    android:id="@+id/etEmail_id"
                    android:layout_marginTop="30dp"
                    android:layout_width="200dp"
                    android:layout_height="35dp"
                    android:hint="@string/e_mail_text"
                    android:background="@drawable/custon_input"
                    android:textSize="18sp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/custom_email"
                    android:inputType="textEmailAddress"
                    android:layout_gravity="center"
                    android:autofillHints="" />


                <EditText
                    android:id="@+id/etPassword_id"
                    android:layout_width="200dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_height="35dp"
                    android:background="@drawable/custon_input"
                    android:hint="@string/password_text"
                    android:textSize="18sp"
                    android:layout_marginTop="20dp"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/custom_password"
                    android:inputType="textPassword"
                    android:layout_gravity="center"
                    android:autofillHints="" />








            <Button
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/login_text"
                android:textColor="@color/white_color"
                android:fontFamily="sans-serif-black"
                android:textSize="16sp"
                android:background="@drawable/design_sign_up"
                android:layout_marginTop="40dp"
                android:onClick="btnLoginEvent"
                android:layout_gravity="center"/>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/i_don_t_have_an_account_text"/>

                <TextView
                    android:layout_marginStart="5dp"
                    android:id="@+id/signUp_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_text"
                    android:textColor="@color/blue_color"
                    android:onClick="signUp_idEvent"/>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>


<!--<ImageView-->
<!--android:layout_width="140dp"-->
<!--android:layout_height="140dp"-->
<!--android:src="@drawable/ic_lockk"-->
<!--android:id="@+id/image_lock"-->
<!--android:layout_marginTop="30dp"/>-->


<!--<EditText-->
<!--android:layout_width="180dp"-->
<!--android:layout_height="wrap_content"-->
<!--android:id="@+id/etEmail_id"-->
<!--android:hint="Enter your Email"-->
<!--android:paddingStart="5dp"-->
<!--android:paddingEnd="5dp"-->
<!--android:layout_marginTop="50dp"/>-->

<!--<EditText-->
<!--android:id="@+id/etPassword_id"-->
<!--android:layout_width="180dp"-->
<!--android:layout_height="wrap_content"-->
<!--android:layout_marginTop="30dp"-->
<!--android:hint="Enter your Password"-->
<!--android:paddingStart="5dp"-->
<!--android:paddingEnd="5dp" />-->


<!--<Button-->
<!--android:layout_width="wrap_content"-->
<!--android:layout_height="wrap_content"-->
<!--android:text="Login"-->
<!--android:layout_marginTop="70dp"-->
<!--android:onClick="btnLoginEvent"/>-->